--- a/dub.html
+++ b/dub.html
@@ -19,6 +19,18 @@
   </head>
   <body>
     <h1>Hello, world!</h1>
+   
+    <h2>Todo List</h2>
+<div class="page-header">
+        <h3>Bar of Progress?</h3>
+      </div>
+      <div class="progress">
+        <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"><span class="sr-only">60% Complete</span></div>
+      </div>
+      <div class="progress">
+        
+
+
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
