--- a/dub.html
+++ b/dub.html
@@ -21,9 +21,10 @@
     <h1>Hello, world!</h1>
    
     <h2>Todo List</h2>
-<div class="page-header">
+
         <h3>Bar of Progress?</h3>
-      </div>
+     <div class="progress">
+       </div>
       <div class="progress">
         <div class="progress-bar" role="progressbar" aria-valuenow="06" aria-valuemin="0" aria-valuemax="100" style="width: 06%;"><span class="sr-only">06% Complete</span></div>
       </div>
