--- a/dub.html
+++ b/dub.html
@@ -23,7 +23,10 @@
     <h2>Todo List</h2>
 
         <h3>Bar of Progress?</h3>
-     <div class="progress">
+    
+
+
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">     <div class="progress">
        </div>
       <div class="progress">
         <div class="progress-bar" role="progressbar" aria-valuenow="06" aria-valuemin="0" aria-valuemax="100" style="width: 06%;"><span class="sr-only">06% Complete</span></div>
