--- a/dub.html
+++ b/dub.html
@@ -23,7 +23,13 @@
     <h2>Todo List</h2>
 
         <h3>Bar of Progress?</h3>
-  
+
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  min.js"></script>
+</head>
+<body>
+
+<div class="container">  
 <div class="progress">
   <div class="progress-bar" role="progressbar" aria-valuenow="70"
   aria-valuemin="0" aria-valuemax="100" style="width:07%">
