--- a/dub.html
+++ b/dub.html
@@ -25,15 +25,16 @@
         <h3>Bar of Progress?</h3>
 
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  min.js"></script>
+  </script>
 </head>
 <body>
 
+ <h4>Basic Progress Bar</h4>
 <div class="container">  
 <div class="progress">
   <div class="progress-bar" role="progressbar" aria-valuenow="70"
-  aria-valuemin="0" aria-valuemax="100" style="width:07%">
-    <span class="sr-only">07% Complete</span>
+  aria-valuemin="0" aria-valuemax="100" style="width:07%"> 07%
+   
   </div>
 </div>   
 
